...
    <!-- Time since prefix -->
    <string name="time_updated_template">Last updated %s</string>
    <!-- Time since prefix for offline mode -->
    <string name="time_updated_template_offline">Offline · Last updated at %s</string>

    <!-- Dialog related strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
</resources>

